# GPU-Accelerated-2D-Aerodynamics-via-Lattice-Boltzmann-using-CUDA

./: .gitignore  ANIMATION_GUIDE.md  CLEANUP_INSTRUCTIONS.md  CLEANUP_SUMMARY.md  CMakeLists.txt  QUICK_VIDEO_GUIDE.md  benchmark_results.json
configs/: SHOWCASE_CONFIGS.md  cavity_10sec_animation.yaml  cavity_cpu.yaml  cavity_cuda.yaml  cavity_developing.yaml  cavity_extended.yaml  cavity_high_re.yaml  cavity_showcase.yaml  cavity_turbulent.yaml  cylinder_columns.yaml  cylinder_columns_extended.yaml  cylinder_cpu.yaml  cylinder_cuda.yaml  cylinder_detailed.yaml  cylinder_showcase.yaml  cylinder_showcase_lic.yaml  cylinder_staggered.yaml  cylinder_v_formation.yaml
docs/: ACADEMIC_REPORT.md  AVAILABLE_SCENARIOS.md  CONFIG_PARAMETERS_GUIDE.md  README.md  VIDEO_DEPENDENCIES.md  VISUALIZATION_EXPLANATION.md  VISUALIZATION_GUIDE.md  developer_guide.md  improved_sims.md  mathjax_header.html  milestones.md  quick_view.md  readme.md  report.md  simulation_results.md  testing.md
docs/archive/: presentation.md  visuals.md
docs/temp_pdf_build/: processed_report.md  template.tex
output/cavity_10sec/: performance.csv
output/cavity_10sec_cpu/: field_000010.vtk  field_000020.vtk  field_000030.vtk  field_000040.vtk  field_000050.vtk  field_000060.vtk  field_000070.vtk  field_000080.vtk  field_000090.vtk  field_000100.vtk  field_000110.vtk  field_000120.vtk  field_000130.vtk  field_000140.vtk  field_000150.vtk  field_000160.vtk  field_000170.vtk  field_000180.vtk  field_000190.vtk  field_000200.vtk  field_000210.vtk  field_000220.vtk  field_000230.vtk  field_000240.vtk  field_000250.vtk  field_000260.vtk  field_000270.vtk  field_000280.vtk  field_000290.vtk  field_000300.vtk  field_000310.vtk  field_000320.vtk  field_000330.vtk  field_000340.vtk  field_000350.vtk  field_000360.vtk  field_000370.vtk  field_000380.vtk  field_000390.vtk  field_000400.vtk  (+261 more)
output/cavity_10sec_cuda/: field_000010.vtk  field_000020.vtk  field_000030.vtk  field_000040.vtk  field_000050.vtk  field_000060.vtk  field_000070.vtk  field_000080.vtk  field_000090.vtk  field_000100.vtk  field_000110.vtk  field_000120.vtk  field_000130.vtk  field_000140.vtk  field_000150.vtk  field_000160.vtk  field_000170.vtk  field_000180.vtk  field_000190.vtk  field_000200.vtk  field_000210.vtk  field_000220.vtk  field_000230.vtk  field_000240.vtk  field_000250.vtk  field_000260.vtk  field_000270.vtk  field_000280.vtk  field_000290.vtk  field_000300.vtk  field_000310.vtk  field_000320.vtk  field_000330.vtk  field_000340.vtk  field_000350.vtk  field_000360.vtk  field_000370.vtk  field_000380.vtk  field_000390.vtk  field_000400.vtk  (+261 more)
output/cavity_10sec_test/: performance.csv
output/cavity_cpu/: field_000050.vtk  field_000050_velocity_magnitude.txt  field_000150.vtk  field_000300.vtk  field_000500.vtk  performance.csv
output/cavity_cuda/: field_000010.vtk  field_000020.vtk  field_000030.vtk  field_000040.vtk  field_000050.vtk  (+496 more)
scripts/: README.md  README_VIDEO.md  benchmark.py  convert_to_pdf.py  convert_to_pdf.sh  fix_math_for_pdf.lua  generate_benchmark_charts.py  generate_report_figures.py  generate_video.py  generate_video_simple.py  profile_cpu.py  profile_cuda.py  quick_benchmark.sh  run_benchmarks.sh  test_verification.sh  view_headless.py  view_vtk.py  visualize.py
src/: CMakeLists.txt  main.cpp
src/analysis/: CudaProfiler.cpp  CudaProfiler.hpp  DiagnosticObserver.hpp  DragLiftCalculator.cpp  DragLiftCalculator.hpp  PerformanceLogger.cpp  PerformanceLogger.hpp  ValidationSuite.cpp  ValidationSuite.hpp  VtkObserver.cpp  VtkObserver.hpp
src/backend/cpu/: CpuLbBackend.cpp  CpuLbBackend.hpp
src/backend/cuda/: CudaLbBackend.cu  CudaLbBackend.hpp
src/core/: D2Q9.hpp  SimulationBackend.hpp  SimulationConfig.hpp  SimulationRunner.cpp  SimulationRunner.hpp
src/io/: SimulationConfigBuilder.cpp  SimulationConfigBuilder.hpp  VtkWriter.cpp  VtkWriter.hpp
tests/: CMakeLists.txt  CpuCudaComparisonTests.cpp  CpuLbBackendTests.cpp  README.md  SimulationConfigBuilderTests.cpp
(+1028 files in other folders)
